Bug: fixed title size on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,8 @@ h1, .topic-img-card {
 .video-push {
     padding-left: 75px;
 }
+
+@media screen and (max-width:500px) {
+h1 {font-size: 45px;
+}
+}
